--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "docker-compose start",
     "dev": "nodemon index.js",
     "lint": "eslint --fix --config=.eslintrc './src/**/*.js'",
     "stop": "docker-compose stop",
