--- a/.github/workflows/tests-n-deploy.yml
+++ b/.github/workflows/tests-n-deploy.yml
@@ -19,8 +19,8 @@ jobs:
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DB_HOST: ${{ secrets.DB_HOST }}
       DB_PORT: ${{ secrets.DB_PORT }}
-      APP_HOST=localhost
-      APP_PORT=3000
+      APP_HOST: localhost
+      APP_PORT: 3000
 
     steps:
       - name: Copy Repo Files
