--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "down": "docker-compose down",
     "db:migrate": "npx sequelize db:migrate",
     "db:migrate:undo": "npx sequelize db:migrate:undo:all",
-    "db:restore": "npx sequelize db:migrate:undo:all && npx sequelize db:migrate"
+    "db:restore": "npx sequelize db:migrate:undo:all && npx sequelize db:migrate",
+    "test": "jest --config jest.config.js --coverage --verbose --forceExit --detectOpenHandles"
   },
   "author": "Igor Lyatskiy",
   "license": "ISC",
@@ -19,15 +20,20 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-plugin-sort-requires": "^2.1.0",
-    "nodemon": "^2.0.13"
+    "jest": "^29.7.0",
+    "jest-extended": "^4.0.2",
+    "nodemon": "^2.0.13",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "http-status": "^1.7.3",
     "i": "^0.3.7",
     "joi": "^17.4.2",
+    "lodash": "^4.17.21",
     "log4js": "^6.4.0",
     "nodemailer": "^6.6.5",
     "npm": "^7.24.1",
