--- a/.github/workflows/tests-n-deploy.yml
+++ b/.github/workflows/tests-n-deploy.yml
@@ -30,6 +30,8 @@ jobs:
           node-version: 16
       - name: Run npm install packages
         run: npm install
+      - name: Run Backend tests
+        run: npm run test
       - name: Checkout
         uses: actions/checkout@v3
       - name: Deploy to production
