--- a/.github/workflows/tests-n-deploy.yml
+++ b/.github/workflows/tests-n-deploy.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   tests:
-    name: Tests and Deployment
+    name: Tests
     runs-on: ubuntu-latest
     env:
       DEBUG: true
@@ -34,6 +34,13 @@ jobs:
         run: npm run test
       - name: Checkout
         uses: actions/checkout@v3
+
+  tests:
+    name: Deployment
+    runs-on: ubuntu-latest
+    needs: tests
+
+    steps:
       - name: Deploy to production
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
