--- a/.github/workflows/tests-n-deploy.yml
+++ b/.github/workflows/tests-n-deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-  tests:
+  deploy:
     name: Deployment
     runs-on: ubuntu-latest
     needs: tests
